After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705524 - searchbar: ignore GDK_KEY_Menu in handle_event()
searchbar: ignore GDK_KEY_Menu in handle_event()
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-08-05 16:24 UTC by Stefano Facchini
Modified: 2013-08-14 00:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
searchbar: ignore GDK_KEY_Menu in handle_event() (869 bytes, patch)
2013-08-05 16:24 UTC, Stefano Facchini
committed Details | Review
test case showing the issue (968 bytes, text/plain)
2013-08-07 10:21 UTC, Stefano Facchini
  Details

Description Stefano Facchini 2013-08-05 16:24:16 UTC
Maybe other keys need to be ignored
Comment 1 Stefano Facchini 2013-08-05 16:24:18 UTC
Created attachment 250893 [details] [review]
searchbar: ignore GDK_KEY_Menu in handle_event()
Comment 2 Stefano Facchini 2013-08-07 10:21:42 UTC
Created attachment 251047 [details]
test case showing the issue
Comment 3 Matthias Clasen 2013-08-14 00:40:59 UTC
Attachment 250893 [details] pushed as f462dde - searchbar: ignore GDK_KEY_Menu in handle_event()