searchbar: ignore GDK_KEY_Menu in handle_event()

https://bugzilla.gnome.org/show_bug.cgi?id=705524